--- a/style/style.qss
+++ b/style/style.qss
@@ -1,7 +1,7 @@
 QToolTip
 {
      border: 1px solid black;
-     background-color: #ffa91f;
+     background-color: #FFA91F;
      padding: 1px;
      border-radius: 3px;
      opacity: 1000;
@@ -12,6 +12,12 @@ QWidget
 {
     color: #dbdbdb;
     background-color: #323232;
+}
+
+QLabel
+{
+	color:#E2E2E2;
+	font-size: 18px;
 }
 
 QTreeView, QListView
@@ -92,10 +98,11 @@ QWidget:focus
 QLineEdit
 {
     background-color: #878686;
-    padding: 1px;
-    border-radius: 5;
+    padding: 0px;
+    border-radius: 2px;
 	color: black;
 	font-weight: light;
+	font-size: 18px;
 }
 
 QPushButton
@@ -106,8 +113,8 @@ QPushButton
     border-color: #1e1e1e;
     border-style: solid;
     border-radius: 6;
-    padding: 3px;
-    font-size: 19px;
+    padding: 0px;
+	font-size: 18px;
     padding-left: 5px;
     padding-right: 5px;
     min-width: 70px;
@@ -123,9 +130,10 @@ QComboBox
 {
     selection-background-color: #ffaa00;
     background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
-    border-style: solid;
-    border: 1px solid #1e1e1e;
-    border-radius: 5px;
+    border-style: solid ;
+	font-size:18px;
+    border: 1px solid #878686;
+    border-radius: 2px;
 }
 
 QComboBox:hover,QPushButton:hover
@@ -154,15 +162,15 @@ QComboBox::drop-down
      subcontrol-position: top right;
      width: 15px;
 	 border : 0px;
-	 border-radius:1px;
+	 border-radius:2px;
      border-color: #1E1E1E;
+	 font-size:18px;
 
  }
 
 QComboBox::down-arrow
 {
      image: url(img/down_arrow.png);
-	 
 	 width: 14px;
      height: 14px;
 }
@@ -171,9 +179,10 @@ QGroupBox
 {
 	border: 1px solid gray;
 	border-color: darkgray;
-	margin-top: 27px;
+	margin: 27px 5px 0px 5px;
 	font-size: 20px;
-	border-radius: 6px;
+	border-radius: 5px;
+	
 }
 
 QGroupBox::title 
@@ -404,7 +413,7 @@ QTabWidget::pane {
 QTabBar::tab:last
 {
     margin-right: 0; /* the last selected tab has nothing to overlap with on the right */
-    border-top-right-radius: 3px;
+    border-top-right-radius: 2px;
 }
 
 QTabBar::tab:first:!selected
@@ -443,7 +452,7 @@ QRadioButton::indicator:checked, QRadioButton::indicator:unchecked{
     color: #b1b1b1;
     background-color: #323232;
     border: 1px solid #b1b1b1;
-    border-radius: 6px;
+    border-radius: 2px;
 }
 
 QRadioButton::indicator:checked
@@ -467,7 +476,7 @@ QCheckBox::indicator{
 
 QRadioButton::indicator
 {
-    border-radius: 6px;
+    border-radius: 2px;
 }
 
 QRadioButton::indicator:hover, QCheckBox::indicator:hover
@@ -526,8 +535,7 @@ QAbstractSpinBox {
     padding-top: 2px;
     padding-bottom: 2px;
     border: 1px solid darkgray;
-
+	font-size:18px;
     border-radius: 2px;
     min-width: 50px;
 }
-
