--- a/style/style.qss
+++ b/style/style.qss
@@ -5,7 +5,7 @@ QToolTip
      padding: 1px;
      border-radius: 3px;
      opacity: 1000;
-	 color: #ffffff;
+     color: #ffffff;
 }
 
 QWidget
@@ -131,14 +131,16 @@ QComboBox
     selection-background-color: #ffaa00;
     background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
     border-style: solid ;
-	font-size:18px;
+    font-size:18px;
     border: 1px solid #878686;
     border-radius: 2px;
+    color: #FFFFFF;
 }
 
 QComboBox:hover,QPushButton:hover
 {
     border: 2px solid QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
+    color: #FFFFFF;
 }
 
 
@@ -148,12 +150,14 @@ QComboBox:on
     padding-left: 4px;
     background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #2d2d2d, stop: 0.1 #2b2b2b, stop: 0.5 #292929, stop: 0.9 #282828, stop: 1 #252525);
     selection-background-color: #ffaa00;
+    color: #FFFFFF;
 }
 
 QComboBox QAbstractItemView
 {
     border: 2px solid darkgray;
     selection-background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
+    color: #ffffff;
 }
 
 QComboBox::drop-down
@@ -161,17 +165,18 @@ QComboBox::drop-down
      subcontrol-origin: padding;
      subcontrol-position: top right;
      width: 15px;
-	 border : 0px;
-	 border-radius:2px;
+     border : 0px;
+     border-radius:2px;
      border-color: #1E1E1E;
-	 font-size:18px;
+     font-size:18px;
+     color: #FFFFFF;
 
  }
 
 QComboBox::down-arrow
 {
      image: url(img/down_arrow.png);
-	 width: 14px;
+     width: 14px;
      height: 14px;
 }
 
