Connect and disconnect button UI changes. Brew number global variable

--- a/GUI.ui
+++ b/GUI.ui
@@ -751,6 +751,9 @@
              <property name="minimum">
               <double>1.000000000000000</double>
              </property>
+             <property name="maximum">
+              <double>9999.000000000000000</double>
+             </property>
              <property name="value">
               <double>1.000000000000000</double>
              </property>
